--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,10 @@
 /* ===================================== General =====================================*/
 
-
 body {
-  font: normal 14px/100% "Andale Mono", AndaleMono, monospace;
   color: #fff;
-  padding: 50px;
-  margin: 0 auto;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  /* padding: 50px; */
+  /* margin: 0 auto; */
   background-color: #374954;
   text-align: center;
 }
@@ -13,46 +12,58 @@ body {
 /* ===================================== Lobby Page =====================================*/
 
 
-.LobbyPageTitle {
-  font-size: 100px;
+.headerContainer {
+  display: flex; 
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center; 
 }
 
-.codesItemsList{
-  display: flex;
-  flex-direction: column;
+.logoContainer {
+  margin-right: 20px; 
+}
+
+.logoImage {
+  width: 300px;
+  height: 200px;
+}
+
+.LobbyPageMainTitle {
+  font-size: 65px;
+  color: #00A8B5;
+}
+
+.LobbyPageSubTitle {
+  font-size: 45px;
+}
+
+.codesItemsList {
   list-style: none;
   line-height: 50px;
   font-size: 20px;
 }
 
-li{ 
-  cursor: pointer;
 
+li {
+  cursor: pointer;
+}
+
+.codesItemsList li span{
+  transition: 0.3s;
+}
+
+.codesItemsList li span:hover {
+  color: #00A8B5;
+  font-size: 30px;
 }
 
 /* ===================================== Code Block Page =====================================*/
 
-.CodeBlockPageTitle{
-  font-size: 50px;
+.CodeBlockPageTitle {
+  font-size: 60px;
+  color: #00A8B5;
 }
 
-
-
-
-
-
-
-
-
-button {
-  display: inline;
-  background-color: #6bbe92;
-  border: 0;
-  border-radius: 10px;
-  box-shadow: 5px;
-  margin: 10px;
-  text-align: center;
-  color: #fff;
-  font-weight: bold;
-  font-size: 50px;
+.codeContainer {
+  text-align: left;
 }
